# rust-omr

./: Cargo.toml  LICENSE.txt  README.md
sheet_music/: Tupfile
src/: geometry.rs  image.rs  lib.rs  loaders.rs  main.rs  other.rs  pgm.rs
test_images/: rust_favicon.pgm
